2008-01-24  Ross Burton  <ross@openedhand.com>

	* settings-daemon.c:
	Handle "greyscale" and "grayscale".

2007-11-16  Ross Burton  <ross@openedhand.com>

	* settings-daemon.c:
	Pass -nocpp to xrdb, as cpp isn't really used on devices. Hell,
	maybe this entire chunk of code should die.

2007-10-17  Thomas Wood  <thomas@openedhand.com>

	* settings-daemon.c: Add support for gtk-color-scheme setting

2007-07-27  Ross Burton  <ross@openedhand.com>

	* settings-daemon.schemas:
	Set a valid default value.

2007-07-18  Ross Burton  <ross@openedhand.com>

	* settings-daemon.schemas:
	* settings-daemon.c:
	For now, change handedness to the implementation of
	gtk-scrolled-window-placement.

2007-07-18  Ross Burton  <ross@openedhand.com>

	* settings-daemon.schemas:
	* settings-daemon.c:
	Add a schema and sync /desktop/poky/interface/handed, which
	specifies the user's preferred hand.

2007-05-08  Thomas Wood  <thomas@openedhand.com>

	* settings-daemon.schemas: Add more schemas

2006-12-24  Ross Burton  <ross@openedhand.com>

	* settings-daemon.c:
	Set Xft.dpi from the X DPI instead of making up 96 if the value
	isn't set in GConf.

2006-08-17  Matthew Allum  <mallum@openedhand.com>

	* xsettings-manager.c: (xsettings_manager_new):
	Make SetSelection use CurrentTime rather than generated timestamp.
       Appears to work around wierd race issues on slow machines.

2006-07-28  Chris Lord  <chris@openedhand.com>

	* configure.ac:
	* Makefile.am:
	* settings-daemon.schemas:
	Add GConf schema to install default value of 'Clearlooks' to
	/desktop/poky/interface/theme.

2006-07-27  Matthew Allum  <mallum@openedhand.com>

	* settings-daemon.c: (main):
	fork before calling gtk_init()

2005-10-14  Ross Burton  <ross@burtonini.com>

	* settings-daemon.c:
	Relocate all GConf keys to /desktop/poky.

2005-10-03  Ross Burton  <ross@burtonini.com>

	* settings-daemon.c:
	Don't notify the X Settings when any key changes, just ones we are
	interested in.
	